--- a/examples/index.html
+++ b/examples/index.html
@@ -17,7 +17,9 @@
         </div>
         <div class="col-md-9 col-lg-9">
           <div class="panel panel-default">
-            <div class="panel-body">aaaa</div>
+            <div class="panel-body">
+              <div id="testDiv"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -83,7 +85,7 @@
         var editor = new JSONTreeView(element, {
             data: treejson,
             onClick: function(node){
-              alert(node.id+'-->'+node.text);
+              $('#testDiv').text('click info: '+node.id+'-->'+node.text);
             }
         });
     </script>
